--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,12 @@
 #server.port=8080
 #management.endpoints.web.exposure.include=*
 
+server:
+  port: 8080
 
 spring:
-  port: 8080
   application:
     name: monitoring
-  boot:
-    admin:
-      client:
-        url: http://localhost:8080
-        instance:
-          service-base-url: http://localhost:8080
-
 management:
   endpoints:
     web:
